<resources>
    <string name="app_name">Don\'t Forget</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="notification_title">Don\'t forget…</string>
    <string name="notification_action_snooze">Snooze</string>

    <string name="authority">com.charlesdrews.dontforget.sync.StubProvider</string>
    <string name="account_type">dontforget.charlesdrews.com</string>
    <string name="account">default_account</string>

    <string name="getting_device_location">Getting device location…</string>
    <string name="retrieving_weather_data">Retrieving weather data…</string>
    <string name="weather_unavailable">Weather data unavailable</string>
    <string name="unable_to_get_device_location">Unable to get device location; try again later</string>
    <string name="no_internet_connection">No internet connection; try again later</string>
    <string name="error_retrieving_weather_data">Error retrieving weather data; try again later</string>

    <string name="task_deleted_message">Task deleted</string>

    <string name="pref_key_suggest_updating_settings">pref_key_suggest_updating_settings</string>
    <string name="suggestion_dialog_title">Customize settings</string>
    <string name="suggestion_dialog_message">Please take a moment to customize your notification settings to fit your schedule.</string>

    <string name="pref_title_notifications_category">Notifications</string>
    <string name="pref_key_notifications_category">pref_key_notifications_category</string>
    <string name="pref_title_notifications_enabled">Show reminder notifications</string>
    <string name="pref_key_notifications_enabled">pref_key_notifications_enabled</string>
    <string name="pref_key_notifications_days">pref_key_notifications_days</string>
    <string name="pref_title_notifications_days">Days to receive notifications</string>
    <string-array name="notification_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="pref_title_notification_times">Notification times</string>
    <string name="pref_key_notification_times">pref_key_notification_times</string>
    <string name="pref_title_notification_times_category">Notification Times</string>
    <string name="pref_key_notification_times_category">pref_key_notification_times_category</string>
    <string name="pref_title_notification_before_work">Before work</string>
    <string name="pref_key_notification_before_work">pref_key_notification_before_work</string>
    <string name="pref_title_notification_lunchtime">Lunchtime</string>
    <string name="pref_key_notification_lunchtime">pref_key_notification_lunchtime</string>
    <string name="pref_title_notification_on_the_way_home">On the way home</string>
    <string name="pref_key_notification_on_the_way_home">pref_key_notification_on_the_way_home</string>
    <string name="pref_title_notification_evening">Evening</string>
    <string name="pref_key_notification_evening">pref_key_notification_evening</string>
    <string name="before_work_default_time">8:0</string>
    <string name="lunchtime_default_time">12:0</string>
    <string name="on_the_way_home_default_time">17:0</string>
    <string name="evening_default_time">19:0</string>
    <string name="notification_prefs_updated">Notification preferences updated</string>

    <string name="pref_title_weather_category">Weather</string>
    <string name="pref_key_weather_category">pref_key_weather_category</string>
    <string name="pref_title_weather_use_device_location">Use device location (GPS)</string>
    <string name="pref_key_weather_use_device_location">pref_key_weather_geo</string>
    <string name="pref_title_weather_static_location">Manually set location</string>
    <string name="pref_key_weather_static_location">pref_key_weather_static_location</string>
    <string name="weather_static_location_default">No location set</string>
    <string name="pref_title_weather_units">Units</string>
    <string name="pref_key_weather_units">pref_key_weather_units</string>
    <string name="weather_units_list_pref_title">Weather units</string>
    <string name="weather_default_unit">English</string>
    <string-array name="weather_units">
        <item>@string/weather_default_unit</item>
        <item>Metric</item>
    </string-array>
    <string-array name="weather_unit_labels">
        <item>Fahrenheit</item>
        <item>Celsius</item>
    </string-array>

    <string name="pref_key_attributions">pref_key_attributions</string>
    <string name="pref_title_attributions">Credits</string>
    <string name="icon_credit">App icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></string>
    <string name="weather_data_credit">Weather data provided by:</string>
    <string name="weather_underground_logo_desc">Weather Underground logo</string>
    <string name="weather_underground_url">https://www.wunderground.com</string>
</resources>
