<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title_notifications_category"
        android:key="@string/pref_key_notifications_category">
        <SwitchPreference
            android:title="@string/pref_title_notifications_enabled"
            android:key="@string/pref_key_notifications_enabled"
            android:defaultValue="true" />

        <MultiSelectListPreference
            android:title="@string/pref_title_notifications_days"
            android:key="@string/pref_key_notifications_days"
            android:entries="@array/notification_days"
            android:entryValues="@array/notification_days"
            android:defaultValue="@array/notification_days"
            android:dependency="@string/pref_key_notifications_enabled" />

        <PreferenceScreen
            android:title="@string/pref_title_notification_times"
            android:key="@string/pref_key_notification_times"
            android:dependency="@string/pref_key_notifications_enabled">
            <PreferenceCategory
                android:title="@string/pref_title_notification_times_category"
                android:key="@string/pref_key_notification_times_category">
                <com.charlesdrews.dontforget.settings.TimePickerPreference
                    android:title="@string/pref_title_notification_before_work"
                    android:key="@string/pref_key_notification_before_work"
                    android:defaultValue="@string/before_work_default_time" />

                <com.charlesdrews.dontforget.settings.TimePickerPreference
                    android:title="@string/pref_title_notification_lunchtime"
                    android:key="@string/pref_key_notification_lunchtime"
                    android:defaultValue="@string/lunchtime_default_time" />

                <com.charlesdrews.dontforget.settings.TimePickerPreference
                    android:title="@string/pref_title_notification_on_the_way_home"
                    android:key="@string/pref_key_notification_on_the_way_home"
                    android:defaultValue="@string/on_the_way_home_default_time" />

                <com.charlesdrews.dontforget.settings.TimePickerPreference
                    android:title="@string/pref_title_notification_evening"
                    android:key="@string/pref_key_notification_evening"
                    android:defaultValue="@string/evening_default_time" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_weather_category"
        android:key="@string/pref_key_weather_category">
        <SwitchPreference
            android:title="@string/pref_title_weather_use_device_location"
            android:key="@string/pref_key_weather_use_device_location"
            android:defaultValue="true"
            android:disableDependentsState="true" />

        <com.charlesdrews.dontforget.settings.WeatherLocationPreference
            android:title="@string/pref_title_weather_static_location"
            android:key="@string/pref_key_weather_static_location"
            android:dependency="@string/pref_key_weather_use_device_location"
            android:defaultValue="@string/weather_static_location_default" />

        <ListPreference
            android:title="@string/pref_title_weather_units"
            android:key="@string/pref_key_weather_units"
            android:summary="%s"
            android:dialogTitle="@string/weather_units_list_pref_title"
            android:entries="@array/weather_unit_labels"
            android:entryValues="@array/weather_units"
            android:defaultValue="@string/weather_default_unit" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_attributions"
        android:key="@string/pref_key_attributions">
        <Preference
            android:layout="@layout/icon_credit" />
        <Preference
            android:layout="@layout/weather_data_credit" />
    </PreferenceCategory>

</PreferenceScreen>